tests/tables/fails/parser/unexpected_tokens4.tbl
# error: unexpected_tokens4.tbl(5,5): Expected identifier, number or a string, got ==
#     == !=
#     ^~
table foo(a b) = [
    == !=
]
